<?xml version="1.0" encoding="utf-8"?>
<!--
  定时任务管理页面菜单
  文件位置：legado/app/src/main/res/menu/auto_task.xml
  作用：提供添加、导入等操作入口。
-->
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        android:title="@string/auto_task_add"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_import_local"
        android:icon="@drawable/ic_import"
        android:title="@string/import_local"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import_onLine"
        android:icon="@drawable/ic_import"
        android:title="@string/import_on_line"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_log"
        android:title="@string/log"
        app:showAsAction="never" />

</menu>