<?xml version="1.0" encoding="utf-8"?>
<!--
  定时任务列表项布局
  文件位置：legado/app/src/main/res/layout/item_auto_task.xml
  作用：显示单个定时任务的信息，包含名称、描述、开关、编辑和菜单按钮。
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="16dp">

    <io.legado.app.lib.theme.view.ThemeCheckBox
        android:id="@+id/cb_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:singleLine="true"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toTopOf="@id/title_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/swt_enabled"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <io.legado.app.lib.theme.view.ThemeSwitch
        android:id="@+id/swt_enabled"
        android:name="@string/enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        app:layout_constraintBottom_toTopOf="@id/title_desc"
        app:layout_constraintRight_toLeftOf="@id/iv_edit"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_edit"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit"
        android:padding="6dp"
        android:src="@drawable/ic_edit"
        android:tint="@color/primaryText"
        app:layout_constraintBottom_toTopOf="@id/title_desc"
        app:layout_constraintRight_toLeftOf="@id/iv_menu_more"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_menu_more"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/more_menu"
        android:padding="6dp"
        android:src="@drawable/ic_more_vert"
        android:tint="@color/primaryText"
        app:layout_constraintBottom_toTopOf="@id/title_desc"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/title_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/cb_task"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>